# raiplay-dl

./: .gitignore  Cargo.toml  README.md
scripts/: mp4_m3u8_req.py
src/: api.rs  downloader.rs  main.rs  sanitize_path.rs
src/models/: video.rs
