[package]
name = "raiplay-dl"
version = "0.1.0"
authors = ["Matteo Guarda <matteoguarda@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2.11", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
m3u8-rs = "1.0.6"
regex = "1.3.4"
indicatif = "0.14.0"
console = "0.9.2"
uuid = { version = "0.8.1", features = ["v4"] }
lazy_static = "1.4.0"
failure = "0.1.6"
